fix spacing

--- a/_sass/summer-night-jekyll.scss
+++ b/_sass/summer-night-jekyll.scss
@@ -565,7 +565,7 @@ ul.nav-links {
     padding: 1.5rem 0.5rem;
   }
 
-  span.float-left, a {
+  span.float-left, a.social {
     margin-right: 0.5rem;
   }
 
